--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Kaimsys - Transform Your Business with AI" />
-    <title>Kaimsys</title>
+    <meta name="description" content="KAiM Systems - Transform Your Business with AI" />
+    <title>KAiM Systems</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
