Set up OpenAI API key configuration and add Amplify deployment guide

--- a/public/compliance-assistant.html
+++ b/public/compliance-assistant.html
@@ -249,7 +249,7 @@
 
     <script>
       // Global variables
-      let simulationMode = true; // Set to true to use simulated responses
+      let simulationMode = true; // Set to false once the backend server is fully deployed
       let currentThreadId = null;
       
       // DOM elements
